@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+19-Mar-2011 Jean-Marie Simonet
+ #$  [#25349] Menu item type Alias, not editable alias. Thanks Pavel.
+
 18-Mar-2011 Jean-Marie Simonet
  # [#24710] Contact language is ignored in frontend. Thanks Christophe.
  # [#25021] Static caching of language switcher ruins the correct class lang-active behaviour. Thanks Mark Visser and Christophe. Tip: save again the switcher parameters.
